--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <title>JS현수막</title>
 
+  <!-- 파비콘 -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.png" type="image/png">
+
   <!-- 네이버 소유확인 태그 -->
   <meta name="naver-site-verification" content="3e1f2f470f0f096e273b097a797f38828706e587" />
 
