--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <title>JS현수막</title>
 
   <!-- 파비콘 -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.png" type="image/png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+<link rel="icon" href="/favicon.ico">
 
   <!-- 네이버 소유확인 태그 -->
   <meta name="naver-site-verification" content="3e1f2f470f0f096e273b097a797f38828706e587" />
